--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -18,12 +18,27 @@
 
 [colors]
 
-background = ${xrdb:color0:#0d0c12}
-foreground = ${xrdb:foregound:#b9b9b6}
+background = #060714
+foreground = ${xrdb:foregound:#e9e9f4}
 accent = ${xrdb:color4:#8d7168}
 border = ${xrdb:color1:#32555f}
-
-
+color0 = ${xrdb:color0:#282936}
+color1 = ${xrdb:color1:#ea51b2}
+color2 = ${xrdb:color2:#00f769}
+color3 = ${xrdb:color3:#ebff87}
+color4 = ${xrdb:color4:#62d6e8}
+color5 = ${xrdb:color5:#b45bcf}
+color6 = ${xrdb:color6:#a1efe4}
+color7 = ${xrdb:color7:#e9e9f4}
+color8 = ${xrdb:color8:#4d4f68}
+color9 = ${xrdb:color9:#ea51b2}
+color10 = ${xrdb:color10:#00f769}
+color11 = ${xrdb:color11:#ebff87}
+color12 = ${xrdb:color12:#62d6e8}
+color13 = ${xrdb:color13:#b45bcf}
+color14 = ${xrdb:color14:#a1efe4}
+color15 = ${xrdb:color15:#f7f7fb}
+    
 ;  _                    
 ; | |__   __ _ _ __ ___ 
 ; | '_ \ / _` | '__/ __|
@@ -32,26 +47,23 @@ border = ${xrdb:color1:#32555f}
 
 [bar/bar]
 enable-ipc=true
-bottom=true
 height = 35 
-width = 30%
-offset-x = 35%
-offset-y = 15
-border-size=2
+border-size=0
 border-color=${colors.border}
+bottom = true
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
 padding=0
 font-0=JetBrains Mono:size=11;3
-font-1=Font Awesome:size=11;3
-font-2=Font Awesome:size=11;3
+font-1=FontAwesome:size=11;3
+font-2=FontAwesome:size=11;3
 font-3=IPAGothic:size=12:antialias=true;3
 
 modules-left = bspwm
-modules-center = time
-modules-right = alsa
+modules-center = date time
+modules-right = cpu memory alsa
 scroll-up = bspwn-wsnext
 scroll-down = bspwn-wsprev
 
@@ -77,7 +89,7 @@ format = <label-state>
 index-sort = true
 format-padding=2
 
-label-focused-foreground = ${colors.accent}
+label-focused-foreground = ${colors.color4}
 
 enable-click = true
 reverse-scroll = false
@@ -85,18 +97,20 @@ reverse-scroll = false
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = " "
+format-prefix = " "
 format-padding = 2
-format-foreground = ${colors.foreground}
+format-foreground = ${colors.color1}
 label = %percentage%%
+label-foreground = ${colors.foreground}
 
 [module/memory]
 type = internal/memory
 interval = 2
-format-padding = 2
-format-prefix = " "
-format-foreground = ${colors.foreground}
+format-padding = 0 
+format-prefix = " "
+format-foreground = ${colors.color2}
 label = %percentage_used%%
+label-foreground = ${colors.foreground}
 
 [module/wlan]
 type = internal/network
@@ -128,11 +142,26 @@ format-connected-prefix = " "
 format-connected-prefix-color1 = ${colors.foreground}
 label-connected = %local_ip%
 
-format-disconnected =
-;format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-;label-disconnected = %ifname% disconnected
-;label-disconnected-color1 = ${colors.color1-alt}
+format-disconnected = <label-disconnected>
+format-disconnected-underline = ${self.format-connected-underline}
+label-disconnected = %ifname% disconnected
+label-disconnected-color1 = ${colors.color1-alt}
+
+[module/date]
+type = internal/date
+interval = 10
+format-padding = 2 
+
+;time = "%H:%M"
+time = "%I:%M%p"
+date = "%a %d/%m"
+
+format =  <label>
+format-foreground = ${colors.color6}
+label = %date%
+label-padding=0
+label-alignment = center
+label-foreground = ${colors.foreground}
 
 [module/time]
 type = internal/date
@@ -143,10 +172,13 @@ format-padding = 0
 time = "%I:%M%p"
 date = "%a %d/%m"
 
-label = %date%  %time%
+format =  <label>
+format-foreground = ${colors.color9}
+label = %time%
 label-padding=0
 label-alignment = center
 label-foreground = ${colors.foreground}
+
 
 [module/temperature]
 type = internal/temperature
@@ -206,10 +238,12 @@ master-soundcard = default
 master-mixer = Master
 
 format-volume = <ramp-volume> <label-volume>
-format-volume-padding =3 
-ramp-volume-0 =
-ramp-volume-1 =
-ramp-volume-2 =
+ramp-volume-foreground = ${colors.color5}
+format-volume-padding = 2
+label-volume = %percentage%
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
 
 ;Spotify modules
 [settings]
